basic event test

--- a/index.html
+++ b/index.html
@@ -15,13 +15,16 @@
         </header>
         <div class="input-group">
             <input type="text" class="form-input input-lg" placeholder="Add a title, name, etc..." />
-            <button class="btn btn-lg btn-primary input-group-btn">Submit</button>
+            <button id="search-btn" class="btn btn-lg btn-primary input-group-btn">Submit</button>
+            <button id="random-btn" class="btn btn-lg btn-primary input-group-btn">Random article</button>
         </div>
     </section>
 
     <section id="search-result" class="container grid-960">
         <div class="loading"></div>
     </section>
+
+    <script src="js/script.js"></script>
 </body>
 
 </html>
