--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="input-group">
             <input type="text" class="form-input input-lg" placeholder="Add a title, name, etc..." />
             <button id="search-btn" class="btn btn-lg btn-primary input-group-btn">Submit</button>
-            <button id="random-btn" class="btn btn-lg btn-primary input-group-btn">Random article</button>
+            <a href="https://en.wikipedia.org/wiki/Special:Random" target="_blank" class="btn btn-lg btn-primary input-group-btn">Random article</a>
         </div>
     </section>
 
