user input suggestions

--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
             <h3>Search any wikipedia page</h3>
         </header>
         <div class="input-group form-autocomplete">
-            <input id="search-field" type="text" class="form-input input-lg" placeholder="Add a title, name, etc..." />
+            <input id="search-field" type="text" class="form-input input-lg" placeholder="Type anything you want to find..." />
             <button id="search-btn" class="btn btn-lg btn-primary input-group-btn">Submit</button>
             <a href="https://en.wikipedia.org/wiki/Special:Random" target="_blank" class="btn btn-lg btn-primary input-group-btn">Random article</a>
 
-            <ul id="search-result" class="form-autocomplete-list">
-                <li class="form-autocomplete-item">
+            <ul id="search-result" class="form-autocomplete-list ghost">
+                <!--<li class="form-autocomplete-item">
                     <div class="chip hand">
                         <div class="chip-content">
                             Test
@@ -33,7 +33,7 @@
                             Test 2
                         </div>
                     </div>
-                </li>
+                </li>-->
             </ul>
         </div>
     </section>
