--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
             <h3>Search any wikipedia page</h3>
         </header>
         <div class="input-group form-autocomplete">
-            <input id="search-field" type="text" class="form-input input-lg" placeholder="Type anything you want to find..." />
+            <input id="search-field" type="text" autofocus="autofocus" class="form-input input-lg" placeholder="Type anything you want to find"
+            />
             <button id="search-btn" class="btn btn-lg btn-primary input-group-btn">Submit</button>
-            <a href="https://en.wikipedia.org/wiki/Special:Random" target="_blank" class="btn btn-lg btn-primary input-group-btn">Random article</a>
+            <a href="https://en.wikipedia.org/wiki/Special:Random" class="btn btn-lg btn-primary input-group-btn">Random article</a>
 
             <ul id="search-result" class="form-autocomplete-list ghost">
                 <!--<li class="form-autocomplete-item">
