--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
     <meta charset="UTF-8">
     <title>Wikipedia-viewer</title>
     <link rel="stylesheet" href="css/spectre.min.css">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
     <section id="search-bar" class="grid-hero container grid-960">
         <header class="text-center">
+            <i class="fa fa-wikipedia-w fa-5x" aria-hidden="true"></i>
             <h3>Search any wikipedia page</h3>
         </header>
         <div class="input-group form-autocomplete">
