--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <input id="search-field" type="text" autofocus="autofocus" class="form-input input-lg" placeholder="Type anything you want to find"
             />
             <button id="search-btn" class="btn btn-lg btn-primary input-group-btn">Submit</button>
-            <a href="https://en.wikipedia.org/wiki/Special:Random" class="btn btn-lg btn-primary input-group-btn">Random article</a>
+            <a href="https://en.wikipedia.org/wiki/Special:Random" class="btn btn-lg btn-primary input-group-btn random-btn">Random article</a>
 
             <ul id="search-result" class="form-autocomplete-list ghost">
             </ul>
