--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <title>Wikipedia-viewer</title>
     <link rel="stylesheet" href="css/spectre.min.css">
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN"
+        crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -16,10 +17,9 @@
             <h3>Search any wikipedia page</h3>
         </header>
         <div class="input-group form-autocomplete">
-            <input id="search-field" type="text" autofocus="autofocus" class="form-input input-lg" placeholder="Type anything you want to find"
+            <input id="search-field" type="text" autofocus="autofocus" class="form-input input-lg" placeholder="Type anything you want to find or..."
             />
-            <button id="search-btn" class="btn btn-lg btn-primary input-group-btn">Submit</button>
-            <a href="https://en.wikipedia.org/wiki/Special:Random" class="btn btn-lg btn-primary input-group-btn random-btn">Random article</a>
+            <a href="https://en.wikipedia.org/wiki/Special:Random" class="btn btn-lg btn-primary input-group-btn random-btn">Get a random article</a>
 
             <ul id="search-result" class="form-autocomplete-list ghost">
             </ul>
